<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vasworks.imalive.android.DdInstructionAddActivity" >

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/instruction_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/instruction_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/instruction_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/narration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_narration"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_amount"
                android:inputType="text|number"
                android:maxLines="1"
                android:singleLine="true" />
		    
		    <Spinner
		        android:id="@+id/recipient"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/prompt_recipient" />
		    
		    <Spinner
		        android:id="@+id/service"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/prompt_service" />     
		    
		    <Spinner
		        android:id="@+id/calendar"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/prompt_calendar" />     

            <CheckBox
                android:id="@+id/recurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_recurrent"
                android:text="@string/prompt_recurrent" />		    
            <Button
                android:id="@+id/instruction_add_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_save"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
