<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >
	
	<TextView
	    android:id="@+id/welcomeTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/welcome_title"
	    android:textColor="@android:color/holo_orange_dark"
	    android:textSize="40.0dp"
	    android:textStyle="bold"
	    android:typeface="monospace"
	    android:gravity="center"
	    android:maxLines="1" />		
	
	<TextView
	    android:id="@+id/welcome"
	    android:layout_width="fill_parent"
	    android:layout_height="300.0dp"
	    android:text="@string/welcome"
	    android:textColor="@android:color/black"
	    android:textSize="16.0dp"
	    android:textStyle="bold"
	    android:typeface="monospace"
	    android:maxLines="20"
	    android:background="@drawable/welcome3"
		android:scrollbars="vertical" />		
	
    <Button
        android:id="@+id/next_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_next"
        android:textStyle="bold"
        android:onClick="next" />
	
</LinearLayout>

